<resources>
    <string name="app_name">PKU Scheduler</string>
    <string name="LoginActivity_TitleName">登录到\n北京大学教学网</string>
    <string name="LoginActivity_Hint_Id">学号 Student ID</string>
    <string name="LoginActivity_Hint_Password">密码 Password</string>
    <string name="LoginActivity_SignIn">Sign in</string>
    <string name="LoginActivity_PrivatePolicy"><u>隐私政策</u></string>
    <string name="LoginActivity_ForgotPassword"><u>忘记密码</u></string>
    <string name="Privacy_Policy">\t\t\t\t本应用非常重视用户隐私政策并严格遵守相关的法律规定。请您仔细阅读《隐私政策》后再继续使用。如果您继续使用我们的服务，表示您已经充分阅读和理解我们协议的全部内容。
        \n\n\t\t\t\t本&#160;app&#160;尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更优质的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。
\n\n<b>1.&#160;适用范围</b>\n\n(a)&#160;在您通过本应用&#160;app&#160;登录到北京大学教学网和&#160;PKU Helper&#160;时，您根据&#160;app&#160;要求提供的个人注册信息；\n(b)&#160;本应用通过合法途径从商业伙伴处取得的用户个人数据。\n(c)&#160;本应用严禁用户发布不良信息，如裸露、色情和亵渎内容，发布的内容我们会进行审核，一经发现不良信息，会禁用该用户的所有权限。\n\n<b>2.&#160;信息使用</b>\n\n(a)&#160;本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人登录信息。如果我们存储发生维修或升级，我们会事先发出推送消息来通知您，请您提前允许本应用消息通知。\n(b)&#160;本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。
\n(c)&#160;为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与本应用合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。
\n\n<b>3.&#160;信息披露</b>\n\n在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：\n(a)&#160;未经您事先同意，我们不会向第三方披露；\n(b)&#160;为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；\n(c)&#160;根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n(d)&#160;如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；\n(e)&#160;如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n\n<b>4.&#160;信息存储和交换</b>\n\n本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。
\n\n<b>5.&#160;Cookie的使用</b>\n\n(a)&#160;在您未拒绝接受&#160;cookies&#160;的情况下，本应用会在您的计算机上设定或取用&#160;cookies&#160;，以便您能登录或使用依赖于&#160;cookies&#160;的本应用平台服务或功能。本应用使用&#160;cookies&#160;可为您提供更加周到的个性化服务，包括推广服务。
\n(b) 您有权选择接受或拒绝接受&#160;cookies&#160;。您可以通过修改浏览器设置的方式拒绝接受&#160;cookies&#160;。但如果您选择拒绝接受&#160;cookies&#160;，则您可能无法登录或使用依赖于&#160;cookies&#160;的本应用网络服务或功能。\n(c)&#160;通过本应用所设&#160;cookie&#160;s所取得的有关信息，将适用本政策。
\n\n<b>6.&#160;本隐私政策的更改</b>\n\n(a)&#160;如果决定更改隐私政策，我们会在本政策中发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。
\n(b)&#160;我们保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，我们会通过网站通知的形式告知。
\n\t\t\t\t请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。
\n\t\t\t\t感谢您花时间了解我们的隐私政策！我们将尽全力保护您的个人信息和合法权益，再次感谢您的信任！
    </string>
    <string name="VerificationActivity_SendVerificationCode">发送验证码至手机</string>
    <string name="VerificationActivity_Continue"></string>
    <string name="VerificationActivity_InputHint">_</string>
    <string name="VerificationActivity_AskPinSuccess">验证码已成功发送至你的手机</string>
    <string name="VerificationActivity_FetchTokenSuccess">获取 PKU Helper Token 成功</string>
    <string name="VerificationActivity_VerificationCodeMissing">验证码填写不正确</string>


    <string name="AddNewEvent_DateTime_Today">今天</string>
    <string name="AddNewEvent_DateTime_Tomorrow">明天</string>
    <string name="AddNewEvent_DateTime_Weekend">后天</string>
    <string name="AddNewEvent_DateTime_SelectADate">选择一个日期</string>

    <string name="AddNewEvent_Reminder_Today">今天晚些时候</string>
    <string name="AddNewEvent_Reminder_Tomorrow">明天</string>
    <string name="AddNewEvent_Reminder_ToTomorrow">后天</string>
    <string name="AddNewEvent_Reminder_SelectADate">选择一个日期</string>


    <string name="TodayActivity_CoursesTitle">日程</string>
    <string name="TodayActivity_DeadlinesTitle">计划</string>

    <string name="Network_Error">网络错误</string>
    <string name="Api_Error">接口异常</string>
    <string name="DrawerText_PrivacyPolicy">隐私政策</string>
    <string name="Schedule_From_Course">来自于教学网的计划</string>


    <string name="DayOfWeek_Mon">星期一</string>
    <string name="DayOfWeek_Tue">星期二</string>
    <string name="DayOfWeek_Wed">星期三</string>
    <string name="DayOfWeek_Thu">星期四</string>
    <string name="DayOfWeek_Fri">星期五</string>
    <string name="DayOfWeek_Sat">星期六</string>
    <string name="DayOfWeek_Sun">星期天</string>


    <string name="calendar">Date</string>
    <string name="todo">To-do</string>
    <string name="info">About</string>
    <string name="add_goal">Add your goal...</string>
    <string name="create_a_new_task">Create a new task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="AddNewEvent_Confirm">完成</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>

