<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/tab_todo">

    <fragment
        android:id="@+id/tab_calendar"
        android:name="com.example.pkuscheduler.fragments.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/tab_todo"
        android:name="com.example.pkuscheduler.fragments.TodoFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/tab_info"
        android:name="com.example.pkuscheduler.fragments.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />

</navigation>