<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/colorWhite">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="0dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="Background.json"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:text="@string/LoginActivity_TitleName"
        android:textColor="@color/colorWhite"
        android:textFontWeight="700"
        android:fontFamily="@font/hanyi"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/privacy_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter"
        android:text="@string/LoginActivity_PrivatePolicy"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="ShowPrivacyPolicyDrawer"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/LoginActivity_ForgotPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toEndOf="@id/privacy_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_corner_8dp_white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:fitsSystemWindows="true"
            >


            <ImageButton
                android:id="@+id/login_button"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/cornered_accent_button_ripple"
                android:fontFamily="@font/inter"

                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/colorWhite"
                android:onClick="AttemptLogin"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/login_button_lottie"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:longClickable="false"
                android:contextClickable="false"
                app:lottie_loop="false"
                app:lottie_fileName="ForwardButtonOnClick.json"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/login_button_loading"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:longClickable="false"
                android:contextClickable="false"
                app:lottie_loop="true"
                app:lottie_fileName="ButtonLoading.json"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                />
            <EditText
                android:id="@+id/Login_input_password"
                android:longClickable="false"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/shape_corner_24dp"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/LoginActivity_Hint_Password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" />
            <EditText
                android:id="@+id/Login_input_id"
                android:longClickable="false"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/shape_corner_24dp"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/LoginActivity_Hint_Id"
                android:inputType="phone"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintBottom_toTopOf="@+id/Login_input_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>