<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VerificationActivity"
    android:background="@color/colorWhite">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="0dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="Background.json"
        app:lottie_loop="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_corner_8dp_white"
        android:layout_marginEnd="12dp"/>
    <TextView

        android:id="@+id/verification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textFontWeight="700"
        android:fontFamily="@font/hanyi"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/privacy_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter"
        android:text="@string/LoginActivity_PrivatePolicy"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="ShowPrivacyPolicyDrawer"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>
    <TextView
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/LoginActivity_ForgotPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toEndOf="@id/privacy_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0">
    </TextView>
    <androidx.core.widget.NestedScrollView

        android:id="@+id/login_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_corner_8dp_white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:fitsSystemWindows="true"
            android:animateLayoutChanges="true"
            >

            <LinearLayout
                android:id="@+id/verification_form"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp"
                android:layout_marginBottom="72dp"
                app:layout_constraintBottom_toTopOf="@+id/sendCode_button"
                android:visibility="invisible"
                >
                <TextView
                    android:longClickable="false"
                    android:id="@+id/codeInput1"
                    android:layout_width="48dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_corner_24dp"
                    android:fontFamily="@font/inter"
                    android:hint="@string/VerificationActivity_InputHint"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:maxLength="1"
                    android:paddingTop="8dp"
                    android:textSize="20sp"
                    />
                <TextView
                    android:longClickable="false"
                    android:id="@+id/codeInput2"
                    android:layout_width="48dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/shape_corner_24dp"
                    android:fontFamily="@font/inter"
                    android:hint="@string/VerificationActivity_InputHint"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:maxLength="1"
                    android:paddingTop="8dp"
                    android:textSize="20sp"
                    />
                <TextView
                    android:longClickable="false"
                    android:id="@+id/codeInput3"
                    android:layout_width="48dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/shape_corner_24dp"
                    android:fontFamily="@font/inter"
                    android:hint="@string/VerificationActivity_InputHint"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:maxLength="1"
                    android:paddingTop="8dp"
                    android:textSize="20sp"
                    />
                <TextView
                    android:longClickable="false"
                    android:id="@+id/codeInput4"
                    android:layout_width="48dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/shape_corner_24dp"
                    android:fontFamily="@font/inter"
                    android:hint="@string/VerificationActivity_InputHint"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:maxLength="1"
                    android:paddingTop="8dp"
                    android:textSize="20sp"
                    />
                <TextView
                    android:longClickable="false"
                    android:id="@+id/codeInput5"
                    android:layout_width="48dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/shape_corner_24dp"
                    android:fontFamily="@font/inter"
                    android:hint="@string/VerificationActivity_InputHint"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:maxLength="1"
                    android:paddingTop="8dp"
                    android:textSize="20sp"
                    />
                <TextView
                    android:longClickable="false"
                    android:id="@+id/codeInput6"
                    android:layout_width="48dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/shape_corner_24dp"
                    android:fontFamily="@font/inter"
                    android:hint="@string/VerificationActivity_InputHint"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:maxLength="1"
                    android:paddingTop="8dp"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/sendCode_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/cornered_accent_button_ripple"
                android:fontFamily="@font/inter"
                android:hint="@string/VerificationActivity_SendVerificationCode"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/continue_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/colorWhite"
                android:onClick="SendVerificationCode"
                />

            <TextView
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/inter"
                android:text="@string/VerificationActivity_Continue"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp"
                android:gravity="bottom|center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/colorWhite"
                android:onClick="SendVerificationCode"
                />
            <EditText
                android:textColor="#00000000"
                android:background="#00000000"
                android:id="@+id/codeCoreText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:maxLength="6"
                android:longClickable="false"
                android:inputType="number"
                android:cursorVisible="false"
                android:visibility="invisible"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>